# krakenschemav2

./: key.json  main.py  pyproject.toml  setup.py  testrunner.py
krakenschema/: cache.py  db.py  schema.py
tests_scripts/: cache_test.py  db_tests.py  schema_tests.py
